--- a/_posts/2019-06-29-the-us-narrative-today.html
+++ b/_posts/2019-06-29-the-us-narrative-today.html
@@ -2627,107 +2627,107 @@ stories:
   domain: http://www.kpcnews.com/
   link: https://www.kpcnews.com/lifestyles/entertainment/article_23688a78-9baa-5985-8581-d555675d0fe6.html
 images:
-- name: ellis-island-ellisisland-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-really-hot.jpg
-- name: powerlines-power-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dry-skin.jpg
-- name: abandonedbuildings_blue_electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_electricity.jpg
-- name: death-valley-death-valley-national-park-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-mucha-mult.jpg
-- name: gears-4882162452-fa3126b38d-b-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-light-dali.jpg
-- name: aws-s3-stories-gypsy-eyes-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gypsy-eyes-blue-circuit.jpg
-- name: rockingchair-rockingchair-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-two.jpg
-- name: art-museum-art-museum-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-4.jpg
-- name: dc-statue-dcstatue-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alien-goggles.jpg
-- name: status-berlin-status-berlin-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-alberto-giacometti.jpg
-- name: containership-containership-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-dali.jpg
-- name: flower-barbed-wire-flower-barbed-wire-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-alien-goggles.jpg
-- name: machine-road-machine-road-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-hot-spicy.jpg
-- name: mistywoods-babyfoot-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crafty-painting.jpg
-- name: oldbarn-oldbarn-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-yellow-paper.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-gred-mash.jpg
-- name: oldsmallboat-oldsmallboat-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-kand-two.jpg
-- name: capital-battle-capitolbattle-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dry-skin.jpg
-- name: server-cloud-server-racks-clouds-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-electricity.jpg
-- name: old-house-oldhouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-sand-paper.jpg
-- name: walled-garden-walled-garden-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-matrix.jpg
-- name: oldcabin-oldcabin-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-colored-circuits.jpg
-- name: crow_yellow_collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_yellow_collage.jpg
-- name: beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
-- name: rockingchair-rockingchair-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gan-vogh.jpg
-- name: white-house-lawn-white-house-lawn-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alberto-giacometti.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-yellow-collage.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-yellow-collage.JPG
-- name: downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
-- name: udnie-DSC_0007.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0007.jpg
-- name: catacombs-catacombs-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-sand-paper.jpg
-- name: cargo-ship-cargo-ship-on-sea-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-cinnamon-rolls.jpg
-- name: downtown-trucksilo-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-three.jpg
-- name: lincoln-memorial-lincolnmemorial-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-kand-two.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-cinnamon-rolls.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-cinnamon-rolls.png
-- name: wind-mills-windmills-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-matrix.jpg
-- name: old-church-oldchurch-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-hot-spicy.jpg
-- name: trucksilo-trucksilo-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-sunday.jpg
-- name: window-window-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-electricity.jpg
-- name: oldhousecars-house-old-cars-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-far-away.jpg
-- name: flower-barbed-wire-flower-barbed-wire-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-oily-mcoilface.jpg
-- name: cyber-api-description-wars-api-specification-wars.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-api-specification-wars.png
-- name: yosemite-yosemite-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-diego-rivera1.jpg
-- name: adam-smith-adam-smith-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-purple-pond.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
-- name: window-window-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-creativity.jpg
-- name: blossombar-purple-pond-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-pond-file-00-00-00-00.jpg
-- name: fence-fence-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-colored-circuits.jpg
-- name: ellis-island-ellisisland-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-post-modern.jpg
-- name: carry-load-carryload-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-diego-rivera1.jpg
-- name: birdhouse-birdhouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-4.jpg
+- name: oldcabin-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-purple-pond.jpg
+- name: aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
+- name: dc-statue-dcstatue-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-graham-sutherland.jpg
+- name: downtown-trucksilo-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-colored-circuits.jpg
+- name: old-barn-old-barn-1500-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-aqua.jpg
+- name: gypsy-wagon-gypsywagon-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-wols.jpg
+- name: catacombs-catacombs-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-atari-asteroids.jpg
+- name: mediterranean-mediterranean-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dali-three.jpg
+- name: file-00_00_00_00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00_00_00_00.jpg
+- name: status-berlin-status-berlin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gred-mash.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
+- name: legal-statue-legalstatue-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crunch-paper.jpg
+- name: oldhouse-oldhouse-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-ww2-color.jpg
+- name: dragon-desert-desert-dragon-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-smoking-cigarette.jpg
+- name: miamibeach-miamibeach-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-graham-sutherland.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
+- name: gypsy-wagon-gypsywagon-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dali-two.jpg
+- name: window-window-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crunch-paper.jpg
+- name: art-museum-art-museum-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-light-dali.jpg
+- name: hollywood-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building.jpg
+- name: curtain-curtain-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-missle.jpg
+- name: mosaic-face-mosaic-face-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crafty-painting.jpg
+- name: white-house-lawn-white-house-lawn-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-atari-missle.jpg
+- name: server-cloud-server-racks-clouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-oily-mcoilface.jpg
+- name: server-cloud-server-racks-door-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-gred-mash.jpg
+- name: aws-s3-stories-DSC-0067-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-DSC-0067-alberto-giacometti.JPG
+- name: sand-hand-sand-hand-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-really-hot.jpg
+- name: powerlines-power-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crabapple.jpg
+- name: castle-wall-DSC-0067-internet-numbers.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-internet-numbers.JPG
+- name: aws-s3-methuselah-methuselah-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-methuselah-methuselah-still.jpg
+- name: aws-s3-stories-white-man-burning-down.jpg-large
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-white-man-burning-down.jpg-large
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-granite.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-granite.png
+- name: fast-lights-freeway-redes-fast-flux-623x425-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-dark-rain.jpg
+- name: machine-road-machine-road-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit-3.jpg
+- name: death-valley-death-valley-national-park-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-umberto-bocc.jpg
+- name: berlinwall2-berlinwall-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-alien-goggles.jpg
+- name: old-house-oldhouse-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-alien-goggles.jpg
+- name: berlinwall2-berlinwall-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-mucha-mult.jpg
+- name: crow_purple_storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purple_storm.jpg
+- name: statue-of-liberty-front-view-statueofliberty-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-nazi-poster.jpg
+- name: beach-rocks-beach-rocks-currents-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-deep-connections.jpg
+- name: hollywood-building-hollywood-building-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dali-three.jpg
+- name: abandonedbuildings_kandinsky_bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_kandinsky_bv.jpg
+- name: amusement-park-amusement-park-2-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-mucha-mult.jpg
+- name: oldroad-old-road-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-diego-rivera1.jpg
+- name: downtown-los-angeles-downtown-la-blue-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit.JPG
+- name: los-angeles-from-observatory-losangeles-from-observatory-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-gan-vogh.jpg
+- name: berlinwall2-berlinwall-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-granite.jpg
+- name: razorwire-DSC-0080-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-mucha-mult.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+- name: oldhouse-oldhouse-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crafty-painting.jpg
 ---
 City OKs Doubling Of Council Wages.&nbsp;Postseason Success Boosts Options For Revamped Walleye Roster.&nbsp;Refresh Your Summer With Delicious, Healthy Mocktails.&nbsp;Ridesharing Use Accelerates 63% At Airport.&nbsp;Gold Line Drops Plan To Widen White Avenue In La Verne.&nbsp;Middle Schools Last Car Show A Special Event.&nbsp;Wilson Wins Half Marathon.&nbsp;Replacing Minnesota Coal Plants Includes An Efficiency Push.&nbsp;
